# homebrew-gula

./: .gitignore  README.md  RELEASE.md  gula  gula.sh  pyproject.toml  steps.sh
.claude/: settings.local.json
Formula/: gula.rb
gula-ai/: Makefile  README.md  go.mod
gula-ai/cmd/gula-ai/: main.go
gula-ai/internal/api/: auth.go  client.go  sse.go  (+1 more)
ios/testgula/: ContentView.swift  Item.swift  testgulaApp.swift
ios/testgula.xcodeproj/: project.pbxproj
ios/testgulaTests/: testgulaTests.swift
ios/testgulaUITests/: testgulaUITests.swift  testgulaUITestsLaunchTests.swift
platform/: android.sh  ios.sh
scripts/: VALIDATION_README.md  android.sh  android_support.sh  general_support.sh  git.sh  global_vars.sh  ios.sh  ios_support.sh  network.sh  operations.sh  steps.sh
scripts/agent/: agent.sh  agent_api.sh  agent_auth.sh  agent_chat.sh  agent_config.sh  agent_local_tools.sh  agent_rag.sh  agent_subagents.sh  agent_ui.sh  chat.py
scripts/android/: android.sh  android_create_new_project.sh  android_support.sh  android_template.sh
scripts/flutter/: flutter.sh  flutter_create_new_project.sh  flutter_support.sh  flutter_template.sh
scripts/ios/: ios.sh  ios_create_new_project.sh  ios_create_project.sh  ios_support.sh  ios_template.sh
scripts/python/: python.sh  python_create_project.sh  python_install.py  python_support.sh  python_template.sh
scripts/ruby/: copy_and_add_xcode.rb  copy_folder.rb  gula_dependencies.rb
scripts/support/: bitbucket_repo.sh  general_support.sh  git.sh  logo.sh  network.sh  validation.sh
testgula.xcodeproj/: project.pbxproj
(+126 files in other folders)
